# cpp_pro_hillel

./: README.md
cpp_cmake_hello/: CMakeLists.txt  Makefile
cpp_task_03/: CMakeLists.txt  Makefile  index.rst  main.cpp
cpp_task_04/: CMakeLists.txt  Makefile  index.rst  main.cpp
cpp_task_05/: CMakeLists.txt  config_manager.h  logger.h  main.cpp
cpp_task_06/: CMakeLists.txt  Makefile  index.rst  logger.h  main.cpp  main.h
cpp_task_07/: Makefile  index.rst  logger.h  main.cpp
cpp_task_08/: CMakeLists.txt  Makefile  index.rst  main.cpp
cpp_task_09/: CMakeLists.txt  Makefile  index.rst  main.cpp  main.h
cpp_task_10/: main.cpp  main.h
cpp_task_11/: CMakeLists.txt  Makefile  index.rst  main.cpp  main.h
cpp_task_12/: CMakeLists.txt  Makefile  index.rst  main.cpp  task_controller.cpp  task_controller.h  task_manager.cpp  task_manager.h  task_view.cpp  task_view.h
cpp_task_13/: CMakeLists.txt  Makefile  index.rst  main.cpp  main.h
cpp_task_14/: CMakeLists.txt  Makefile  index.rst  main.cpp
cpp_task_15/: CMakeLists.txt  Makefile  index.rst  main.cpp  main.h
cpp_task_16/: CMakeLists.txt  Makefile  index.rst  logger.h  main.cpp
cpp_task_17/: CMakeLists.txt  Makefile  index.rst  main.cpp
cpp_task_18/: CMakeLists.txt  Makefile  index.rst  main.cpp
cpp_task_18/shared_ptr_lib/: CMakeLists.txt  my_shared_ptr.h  my_shared_ptr.tpp
cpp_task_19/: CMakeLists.txt  Makefile  index.rst
cpp_task_20/: CMakeLists.txt  Makefile  index.rst  main.cpp
cpp_task_21/HelloQt/: CMakeLists.txt  mainwindow.cpp
cpp_task_22/tcp_client/: CMakeLists.txt  Makefile  index.rst  main.cpp
cpp_task_22/tcp_server/: CMakeLists.txt  Makefile  index.rst  main.cpp
cpp_task_23/mini_explorer_widget/: customdelegate.h  customfilesystemmodel.h  main.cpp  mini_explorer_widget.pro
cpp_task_24/mini_explorer_qml/: customfilesystemmodel.h  main.cpp  main.qml  mini_explorer_qml.pro
